--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "formik": "^2.2.9",
+    "immutability-helper": "^3.1.1",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
@@ -45,6 +46,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-chartjs-2": "^4.0.0",
+    "react-component-export-image": "^1.0.6",
     "react-csv": "^2.2.2",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -69,10 +71,8 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
-    "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@babel/runtime": "^7.16.3",
     "@commitlint/cli": "^15.0.0",
