--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.tsx",
+  "homepage": "https://sgn13.github.io/footline",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "watch": "tsc --watch --noEmit --project 'tsconfig.json'",
     "dev": "webpack serve --config ./webpack.development.js",
     "start": "node ./server.js",
@@ -111,6 +114,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^6.2.0",
     "husky": "^4.3.5",
     "lint-staged": "^10.5.3",
     "prettier": "^2.4.1",
