--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.tsx",
-  "homepage": "https://sgn13.github.io/footline",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -11,9 +10,8 @@
     "dev": "webpack serve --config ./webpack.development.js",
     "start": "node ./server.js",
     "build:copy": "cp -a public/. build",
-    "build:move": "mv tbuild build",
     "build:clean": "rm -rf build",
-    "build": "webpack --config ./webpack.production.js && npm run build:clean && npm run build:move && npm run build:copy",
+    "build": "webpack --config ./webpack.production.js && npm run build:clean && npm run build:copy",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook -c .storybook -o .out",
     "lint": "lint-staged",
@@ -114,7 +112,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "gh-pages": "^6.2.0",
     "husky": "^4.3.5",
     "lint-staged": "^10.5.3",
     "prettier": "^2.4.1",
